tests/error/comment.lua
-- print number 2
print(2)

--[[ print foo string ]]
print('foo')

--[==[ print 1 ]=]
print(1)
